# hecate

./: Cargo.toml  README.md
benches/: criterion.rs
data/: aes_gcm_test.json  commitment.txt  envelope.txt  mfrank.txt  mfrank_received.txt  mod_keys.txt  mod_pk.txt  mod_sig_pk.txt  plat_keys.txt  plat_pk.txt  report.txt  token.txt  token2.txt  user_id.txt
data/msgs/: lorem.txt  message1.txt  message3.txt  message4.txt  message5.txt  msg1.txt  msg10.txt  msg3.txt  msg4.txt  msg6.txt  msg8.txt  msg9.txt
java/: Cargo.toml
java/src/: hecate_jni.rs
report/Moderator/Moderator __ Generate _10000_ tokens/base/: raw.csv  tukey.json
report/Moderator/Moderator __ Generate _10000_ tokens/change/: estimates.json
report/Moderator/Moderator __ Generate _10000_ tokens/new/: benchmark.json  estimates.json  sample.json
report/Moderator/Moderator __ Generate _10000_ tokens/report/: index.html
report/Moderator/Moderator __ Generate _1000_ tokens/base/: estimates.json  raw.csv
report/Moderator/Moderator __ Generate _1000_ tokens/change/: estimates.json
report/Moderator/Moderator __ Generate _1000_ tokens/new/: benchmark.json  sample.json  tukey.json
report/Moderator/Moderator __ Generate _1000_ tokens/report/: index.html
report/Moderator/Moderator __ Generate _100_ tokens/base/: estimates.json  tukey.json
report/Moderator/Moderator __ Generate _100_ tokens/change/: estimates.json
report/Moderator/Moderator __ Generate _100_ tokens/new/: benchmark.json  raw.csv  sample.json
report/Moderator/Moderator __ Generate _100_ tokens/report/: index.html
report/Moderator/Moderator __ Generate _10_ tokens/base/: estimates.json  raw.csv
report/Moderator/Moderator __ Generate _10_ tokens/change/: estimates.json
report/Moderator/Moderator __ Generate _10_ tokens/new/: benchmark.json  sample.json  tukey.json
report/Moderator/Moderator __ Generate _10_ tokens/report/: index.html
report/Moderator/Moderator __ Generate _1_ tokens/base/: estimates.json  raw.csv  tukey.json
report/Moderator/Moderator __ Generate _1_ tokens/change/: estimates.json
report/Moderator/Moderator __ Generate _1_ tokens/new/: benchmark.json  sample.json
report/Moderator/Moderator __ Generate _1_ tokens/report/: index.html
report/Moderator/Moderator __ Inspect and Trace /base/: estimates.json
report/Moderator/Moderator __ Inspect and Trace /change/: estimates.json
report/Moderator/Moderator __ Inspect and Trace /new/: benchmark.json  raw.csv  sample.json  tukey.json
report/Moderator/Moderator __ Inspect and Trace /report/: index.html
report/Moderator/report/: index.html
report/Platform/Sign and Timestamp /base/: estimates.json  sample.json  tukey.json
report/Platform/Sign and Timestamp /change/: estimates.json
report/Platform/Sign and Timestamp /new/: benchmark.json  raw.csv
report/Platform/Sign and Timestamp /report/: index.html
report/Receiver/Verify Message/base/: raw.csv  tukey.json
report/Receiver/Verify Message/change/: estimates.json
report/Receiver/Verify Message/new/: benchmark.json  estimates.json  sample.json
report/Receiver/Verify Message/report/: index.html
report/Sender/Frank __ Plaintext Size _10000_B/base/: benchmark.json  raw.csv  tukey.json
report/Sender/Frank __ Plaintext Size _10000_B/change/: estimates.json
report/Sender/Frank __ Plaintext Size _10000_B/new/: estimates.json  sample.json
report/Sender/Frank __ Plaintext Size _10000_B/report/: index.html
report/Sender/Frank __ Plaintext Size _1000_B/base/: benchmark.json  raw.csv  sample.json  tukey.json
report/Sender/Frank __ Plaintext Size _1000_B/change/: estimates.json
report/Sender/Frank __ Plaintext Size _1000_B/new/: estimates.json
report/Sender/Frank __ Plaintext Size _1000_B/report/: index.html
report/Sender/Frank __ Plaintext Size _100_B/base/: raw.csv  tukey.json
report/Sender/Frank __ Plaintext Size _100_B/change/: estimates.json
report/Sender/Frank __ Plaintext Size _100_B/new/: benchmark.json  estimates.json  sample.json
report/Sender/Frank __ Plaintext Size _100_B/report/: index.html
report/Sender/Frank __ Plaintext Size _10_B/base/: benchmark.json  raw.csv  sample.json  tukey.json
report/Sender/Frank __ Plaintext Size _10_B/change/: estimates.json
report/Sender/Frank __ Plaintext Size _10_B/new/: estimates.json
report/Sender/report/: index.html
report/report/: index.html
scripts/: build.sh  clean.sh  data.txt  generate_msg.py  java_versioning.sh  run.sh  run_pipeline.sh  run_receive.sh  run_receiver.sh  run_sender.sh  setup_parties.sh
scripts/tests/: 100.txt  10000B.txt  10B.txt  1KB.txt  2500B.txt  250B.txt  5000B.txt  500B.txt  50B.txt  7500B.txt  750B.txt
src/: lib.rs  main.rs  test_keys.rs
src/hecate_lib/: experiment.rs  hooks.rs  mod.rs  moderator.rs  platform.rs  receiver.rs  sender.rs  types.rs  user.rs  utils.rs
src/lib/: forwarder.rs  hooks.rs  lib.rs  moderator.rs  platform.rs  receiver.rs  sender.rs  tests.rs  types.rs  utils.rs
src/moderator/: main.rs
src/moderator/generate/: main.rs
src/moderator/inspect/: main.rs
src/moderator/setup/: main.rs
src/platform/: main.rs
src/platform/setup/: main.rs
src/platform/timestamp/: main.rs
src/receiver/: main.rs
src/sender/: main.rs
src/sender/fetch_tokens/: main.rs
src/sender/send/: main.rs
(+1 files in other folders)
