[profile.release]
opt-level = 3

[package]
name = "hecate"
version = "0.1.0"
authors = ["petitpenguin <ra1issa@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
criterion = {version = "0.3.5"}
bincode = "1.3.3"
rand_core = { version = "0.5", default-features = false }
rand = "0.7.3"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
curve25519-dalek = { version = "3.0", features = ["serde"] }
libsignal-protocol = {git = "https://github.com/Ra1issa/libsignal-client"}
signal-crypto = {git = "https://github.com/Ra1issa/libsignal-client"}
poksho = {git = "https://github.com/Ra1issa/libsignal-client"}

[profile.dev.package.num-bigint-dig]
opt-level = 3 # too slow otherwise!

[lib]
name = "hecate"
path = "src/lib/lib.rs"

[[bench]]
name = "criterion"
harness = false

[[bin]]
name = "sender_send"
path = "src/bin/sender/send/main.rs"

[[bin]]
name = "sender_fetch"
path = "src/bin/sender/fetch_tokens/main.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver/main.rs"

[[bin]]
name = "platform_timestamp"
path = "src/bin/platform/timestamp/main.rs"

[[bin]]
name = "platform_setup"
path = "src/bin/platform/setup/main.rs"

[[bin]]
name = "moderator_generate"
path = "src/bin/moderator/generate/main.rs"

[[bin]]
name = "moderator_inspect"
path = "src/bin/moderator/inspect/main.rs"

[[bin]]
name = "moderator_setup"
path = "src/bin/moderator/setup/main.rs"
