[profile.release]
opt-level = 3

[package]
name = "hecate_jni"
version = "0.1.0"
authors = ["petitpenguin <ra1issa@bu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
bincode = "1.3.3"
hecate = { path = ".." }

[lib]
crate_type = ["cdylib"]
name = "hecate_jni"
path = "src/hecate_jni.rs"
